# djangocms-themata

./: README.md  README.rst  empty.py  makemigrations.py  pyproject.toml
djangocms_themata/: __init__.py  admin.py  apps.py  models.py  util.py
djangocms_themata/management/commands/: importbootswatch.py
djangocms_themata/migrations/: 0001_initial.py  0002_auto_20250113_1849.py  __init__.py
djangocms_themata/static/themata/css/: navbar.css
djangocms_themata/templates/: base.html
djangocms_themata/templates/themata/: link.html  navbar copy.html  pagination.html
djangocms_themata/templatetags/: themata.py
tests/: settings.py  test_models.py
