[tool.poetry]
name = "djangocms-themata"
version = "0.1.1"
description = "A set of themes for Django CMS projects."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/rbturnbull/djangocms-themata"
repository = "https://github.com/rbturnbull/djangocms-themata"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Django CMS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = ">=3.2"
django-cms = ">=3.9.0"
djangocms-bootstrap = ">=1.1.2"
djangocms-page-meta = ">=1.0.1"

[tool.poetry.dev-dependencies]
pytest-django = ">=4.9.0"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
testpaths = ["tests"]  # Restrict pytest to look for tests only in the `tests` directory
django_find_project = false  # Optional: avoids unexpected settings detection
DJANGO_SETTINGS_MODULE = "tests.settings"


[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
